--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
     "axios": "^1.4.0",
     "chart.js": "^4.2.1",
     "chonky": "^2.3.2",
